--- a/index.html
+++ b/index.html
@@ -13,8 +13,7 @@
                 <div class="card">
                     <div class="card-body">
                         <h5 class="card-title">Registro de Birretes</h5>
-                        <p class="card-text">Haz clic para registrar un birrete.</p>
-                        <a href="birrete.html" class="btn btn-primary">Registrar Birrete</a>
+                        <a href="birrete.html" class="btn btn-primary">Haz clic para registrar un birrete.</a>
                     </div>
                 </div>
             </div>
@@ -22,8 +21,7 @@
                 <div class="card">
                     <div class="card-body">
                         <h5 class="card-title">Registro de Togas</h5>
-                        <p class="card-text">Haz clic para registrar una toga.</p>
-                        <a href="togas.html" class="btn btn-primary">Registrar Toga</a>
+                        <a href="togas.html" class="btn btn-primary">Haz clic para registrar una toga.</a>
                     </div>
                 </div>
             </div>
