--- a/togas.html
+++ b/togas.html
@@ -10,7 +10,8 @@
     <div class="container">
         <h1 class="text-center">Registro de Togas</h1>
         <div class="col-md-6">
-            <form id="gownForm" onsubmit="saveGown(); return false;">
+            <!-- Para guardar los datos asegurence de ponerle el mismo nombre guardarT a la función en el archivo-->
+            <form id="gownForm" onsubmit="guardarT(); return false;">
                 <input type="text" id="gownStudentName" class="form-control" placeholder="Nombre del Estudiante" required>
                 <input type="text" id="gownSize" class="form-control" placeholder="Tamaño de la Toga" required>
                 <input type="text" id="gownSignatureGiven" class="form-control" placeholder="Firma al Entregar" required>
@@ -26,6 +27,7 @@
             <table class="table table-dark table-striped">
                 <thead>
                     <tr>
+                        <th>No. Carnet</th>
                         <th>Nombre del Estudiante</th>
                         <th>Tamaño de la Toga</th>
                         <th>Firma al Entregar</th>
