Cambio de nombre de input

--- a/birrete.html
+++ b/birrete.html
@@ -17,7 +17,7 @@
                 <input type="text" id="NombreB" class="form-control" placeholder="Nombre del Estudiante" required>
                 <input type="text" id="TallaB" class="form-control" placeholder="Tamaño del Birrete" required>
                 <input type="date" id="FechaEnB" class="form-control" placeholder="Fecha de Entrega" required>
-                <input type="date" id="FechaReB" class="form-control" placeholder="Fecha de Devolución" required>
+                <input type="date" id="FechaDeB" class="form-control" placeholder="Fecha de Devolución" required>
                 <button type="submit" class="btn btn-primary">Registrar Birrete</button>
             </form>
         </div>
