--- a/togas.html
+++ b/togas.html
@@ -16,7 +16,7 @@
                 <input type="text" id="NombreT" class="form-control" placeholder="Nombre del Estudiante" required>
                 <input type="text" id="TallaT" class="form-control" placeholder="Tamaño de la Toga" required>
                 <input type="date" id="FechaEnT" class="form-control" placeholder="Fecha de Entrega" required>
-                <input type="date" id="FechaReT" class="form-control" placeholder="Fecha de Devolución" required>
+                <input type="date" id="FechaDeT" class="form-control" placeholder="Fecha de Devolución" required>
                 <button type="submit" class="btn btn-primary">Registrar Toga</button>
             </form>
         </div>
